--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.336.0",
     "next-themes": "^0.3.0",
+    "prop-types": "^15.8.1",
     "re-resizable": "^6.9.17",
     "react": "^18.2.0",
+    "react-aria-components": "^1.2.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
     "sonner": "^1.5.0",
